--- a/PPMTool/src/main/resources/application.properties
+++ b/PPMTool/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.jpa.show-sql=true
 
+spring.datasource.url = jdbc:mysql://localhost:3306/ppm
+spring.datasource.username=root
+spring.datasource.password=0raclE**
+
+spring.jpa.hibernate.ddl-auto = update
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
