--- a/PPMTool/src/main/resources/application.properties
+++ b/PPMTool/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/ppm
 spring.datasource.username=root
 spring.datasource.password=0raclE**
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.ddl-auto = update
